--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "sass-loader": "^13.2.0"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
+    "pinia": "^2.0.32",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.23.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
